--- a/Client/package.json
+++ b/Client/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "client": "file:",
+    "framer-motion": "^12.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "5.5.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "7.5.1"
   },
   "devDependencies": {
